--- a/deliverable1.Rmd
+++ b/deliverable1.Rmd
@@ -1,25 +1,28 @@
 ---
 title: "R Notebook"
-output: html_notebook
+output:
+  html_document:
+    df_print: paged
 ---
 
 1. In an Introduction, describe your motivation for choosing the general topic of your portfolio.
 
-Introduction:
+# Introduction:
 
 The topic for my portfolio project is education.  I would like to do some analysis on the changes in education over time with my project.  I decided to choose this area to study because education is a very important aspect of every person's life.  It is an area that changes quite frequently and I would like to study some of those changes and how they affect students and teachers.  One area that I am interesting in studying in relation to education is how political policies have effected education and student achievement.
 
-Data:
+# Data:
 
 The first thing I will do is import the first data set that I will be using in my study. To do that I need to install/load some R libraries and then I will read the data into a table.
 
 ```{r}
-install.packages("tidyverse")
+#install.packages("tidyverse")
 library("tidyverse")
 library("dplyr")
 library("tidyr")
 
-education_attainment <- read_csv("./Education.csv")
+suppressMessages(education_attainment <- read_csv("./Education.csv"))
+
 ```
 
 The data I found gives information on the educational attainment by state and county in the United States. I found this data on the USDA (United States Department of Agriculture) Economic Research Service website. Although it seems odd to find education data on the Department of Agriculture, the website had quite a variety of data available.  Since it is a .gov website the data should be reliable for us to use.  
@@ -27,10 +30,8 @@ The data I found gives information on the educational attainment by state and co
 I have used colnames to print out all of the column names in the data. And I am using typeof() and mode() to see the type of each of the different columns. The sapply() function just applies the function (the second argument) to the entire table (the first argument).
 
 ```{r}
-colnames(education_attainment)
-
-sapply(education_attainment, typeof)
-sapply(education_attainment, mode) 
+suppressMessages(sapply(education_attainment, typeof))
+suppressMessages(sapply(education_attainment, mode))
 ```
 
 A brief description of the columns in the data:
@@ -52,10 +53,10 @@ A brief description of the columns in the data:
  *** The above 8 columns repeat for the years 1980, 1990, 2000, 2013-2017 ***                      
 
 FIPS Code, State, and Area name are being stored in our table as characters.  The rest of the columns are being stored as numbers (specifically doubles).
-Cleaning the data:
+
+# Cleaning the data:
 
 The next step is to clean the data so that it can be more easily used.
-
 The column names the the educational_attainment table is long and incosistant. So first I will clean up the column names so that they are more readable and are consistant.
 
 ```{r}
@@ -123,7 +124,7 @@ Next I am going to split the data in education_attainmnet into two different tab
 ```{r}
 location <- tibble("FIPS_Code" = education_attainment$FIPS_Code, "State" = education_attainment$State, "Area_Name" = education_attainment$Area_Name, "2003_Rural_Urban_Continuum_Code" = education_attainment$`2003_Rural_Urban_Continuum_Code`,  "2003_Urban_Influence_Code" = education_attainment$`2003_Urban_Influence_Code`, "2013_Rural_Urban_Continuum_Code" = education_attainment$`2013_Rural_Urban_Continuum_Code`, "2013_Urban_Influence_Code" = education_attainment$`2013_Urban_Influence_Code`)
 
-education <- tibble("FIPS_Code" = education_attainment$FIPS_Code, "1970_Less_Than_High_School_Diploma" = education_attainment$`1970_Less_Than_High_School_Diploma`, "1970_High_School_Diploma_Only" = education_attainment$`1970_High_School_Diploma_Only`, "1970_Some_College" = education_attainment$`1970_Some_College`, "1970_Bachelor_Degree_Or_Higher" = education_attainment$`1970_Bachelor_Degree_Or_Higher`, "1970_Percent_Less_Than_High_School_Diploma" = education_attainment$`1970_Percent_Less_Than_High_School_Diploma`, "1970_Percent_High_School_Diploma_Only" = education_attainment$`1970_Percent_High_School_Diploma_Only`, "1970_Percent_Some_College" = education_attainment$`1970_Percent_Some_College`, "1970_Percent_Bachelor_Degree_Or_Higher" = education_attainment$`1980_Percent_Bachelor_Degree_Or_Higher`, "1980_Less_Than_High_School_Diploma" = education_attainment$`1980_Less_Than_High_School_Diploma`, "1980_High_School_Diploma_Only" = education_attainment$`1980_High_School_Diploma_Only`, "1980_Some_College" = education_attainment$`1980_Some_College`, "1980_Bachelor_Degree_Or_Higher" = education_attainment$`1980_Bachelor_Degree_Or_Higher`, "1980_Percent_Less_Than_High_School_Diploma" = education_attainment$`1980_Percent_Less_Than_High_School_Diploma`, "1980_Percent_High_School_Diploma_Only" = education_attainment$`1980_Percent_High_School_Diploma_Only`, "1980_Percent_Some_College" = education_attainment$`1980_Percent_Some_College`, "1980_Percent_Bachelor_Degree_Or_Higher" = education_attainment$`1980_Percent_Bachelor_Degree_Or_Higher`, "1990_Less_Than_High_School_Diploma" = education_attainment$`1990_Less_Than_High_School_Diploma`, "1990_High_School_Diploma_Only" = education_attainment$`1990_High_School_Diploma_Only`, "1990_Some_College" = education_attainment$`1990_Some_College`, "1990_Bachelor_Degree_Or_Higher" = education_attainment$`1990_Bachelor_Degree_Or_Higher`, "1990_Percent_Less_Than_High_School_Diploma" = education_attainment$`1990_Percent_Less_Than_High_School_Diploma`, "1990_Percent_High_School_Diploma_Only" = education_attainment$`1990_Percent_High_School_Diploma_Only`, "1990_Percent_Some_College" = education_attainment$`1990_Percent_Some_College`, "1990_Percent_Bachelor_Degree_Or_Higher" = education_attainment$`1990_Percent_Bachelor_Degree_Or_Higher`, "2000_Less_Than_High_School_Diploma" = education_attainment$`2000_Less_Than_High_School_Diploma`, "2000_High_School_Diploma_Only" = education_attainment$`2000_High_School_Diploma_Only`, "2000_Some_College" = education_attainment$`2000_Some_College`, "2000_Bachelor_Degree_Or_Higher" = education_attainment$`2000_Bachelor_Degree_Or_Higher`, "2000_Percent_Less_Than_High_School_Diploma" = education_attainment$`2000_Percent_Less_Than_High_School_Diploma`, "2000_Percent_High_School_Diploma_Only" = education_attainment$`2000_Percent_High_School_Diploma_Only`, "2000_Percent_Some_College" = education_attainment$`2000_Percent_Some_College`, "2000_Percent_Bachelor_Degree_Or_Higher" = education_attainment$`2000_Percent_Bachelor_Degree_Or_Higher`, "2013-17_Less_Than_High_School_Diploma" = education_attainment$`2013-17_Less_Than_High_School_Diploma`, "2013-17_High_School_Diploma_Only" = education_attainment$`2013-17_High_School_Diploma_Only`, "2013-17_Some_College" = education_attainment$`2013-17_Some_College`, "2013-17_Bachelor_Degree_Or_Higher" = education_attainment$`2013-17_Bachelor_Degree_Or_Higher`, "2013-17_Percent_Less_Than_High_School_Diploma" = education_attainment$`2013-17_Percent_Less_Than_High_School_Diploma`, "2013-17_Percent_High_School_Diploma_Only" = education_attainment$`2013-17_Percent_High_School_Diploma_Only`, "2013-17_Percent_Some_College" = education_attainment$`2013-17_Percent_Some_College`, "2013-17_Percent_Bachelor_Degree_Or_Higher" = education_attainment$`2013-17_Percent_Bachelor_Degree_Or_Higher`)
+education <- tibble("FIPS_Code" = education_attainment$FIPS_Code, "State" = education_attainment$State, "1970_Less_Than_High_School_Diploma" = education_attainment$`1970_Less_Than_High_School_Diploma`, "1970_High_School_Diploma_Only" = education_attainment$`1970_High_School_Diploma_Only`, "1970_Some_College" = education_attainment$`1970_Some_College`, "1970_Bachelor_Degree_Or_Higher" = education_attainment$`1970_Bachelor_Degree_Or_Higher`, "1970_Percent_Less_Than_High_School_Diploma" = education_attainment$`1970_Percent_Less_Than_High_School_Diploma`, "1970_Percent_High_School_Diploma_Only" = education_attainment$`1970_Percent_High_School_Diploma_Only`, "1970_Percent_Some_College" = education_attainment$`1970_Percent_Some_College`, "1970_Percent_Bachelor_Degree_Or_Higher" = education_attainment$`1980_Percent_Bachelor_Degree_Or_Higher`, "1980_Less_Than_High_School_Diploma" = education_attainment$`1980_Less_Than_High_School_Diploma`, "1980_High_School_Diploma_Only" = education_attainment$`1980_High_School_Diploma_Only`, "1980_Some_College" = education_attainment$`1980_Some_College`, "1980_Bachelor_Degree_Or_Higher" = education_attainment$`1980_Bachelor_Degree_Or_Higher`, "1980_Percent_Less_Than_High_School_Diploma" = education_attainment$`1980_Percent_Less_Than_High_School_Diploma`, "1980_Percent_High_School_Diploma_Only" = education_attainment$`1980_Percent_High_School_Diploma_Only`, "1980_Percent_Some_College" = education_attainment$`1980_Percent_Some_College`, "1980_Percent_Bachelor_Degree_Or_Higher" = education_attainment$`1980_Percent_Bachelor_Degree_Or_Higher`, "1990_Less_Than_High_School_Diploma" = education_attainment$`1990_Less_Than_High_School_Diploma`, "1990_High_School_Diploma_Only" = education_attainment$`1990_High_School_Diploma_Only`, "1990_Some_College" = education_attainment$`1990_Some_College`, "1990_Bachelor_Degree_Or_Higher" = education_attainment$`1990_Bachelor_Degree_Or_Higher`, "1990_Percent_Less_Than_High_School_Diploma" = education_attainment$`1990_Percent_Less_Than_High_School_Diploma`, "1990_Percent_High_School_Diploma_Only" = education_attainment$`1990_Percent_High_School_Diploma_Only`, "1990_Percent_Some_College" = education_attainment$`1990_Percent_Some_College`, "1990_Percent_Bachelor_Degree_Or_Higher" = education_attainment$`1990_Percent_Bachelor_Degree_Or_Higher`, "2000_Less_Than_High_School_Diploma" = education_attainment$`2000_Less_Than_High_School_Diploma`, "2000_High_School_Diploma_Only" = education_attainment$`2000_High_School_Diploma_Only`, "2000_Some_College" = education_attainment$`2000_Some_College`, "2000_Bachelor_Degree_Or_Higher" = education_attainment$`2000_Bachelor_Degree_Or_Higher`, "2000_Percent_Less_Than_High_School_Diploma" = education_attainment$`2000_Percent_Less_Than_High_School_Diploma`, "2000_Percent_High_School_Diploma_Only" = education_attainment$`2000_Percent_High_School_Diploma_Only`, "2000_Percent_Some_College" = education_attainment$`2000_Percent_Some_College`, "2000_Percent_Bachelor_Degree_Or_Higher" = education_attainment$`2000_Percent_Bachelor_Degree_Or_Higher`, "2013-17_Less_Than_High_School_Diploma" = education_attainment$`2013-17_Less_Than_High_School_Diploma`, "2013-17_High_School_Diploma_Only" = education_attainment$`2013-17_High_School_Diploma_Only`, "2013-17_Some_College" = education_attainment$`2013-17_Some_College`, "2013-17_Bachelor_Degree_Or_Higher" = education_attainment$`2013-17_Bachelor_Degree_Or_Higher`, "2013-17_Percent_Less_Than_High_School_Diploma" = education_attainment$`2013-17_Percent_Less_Than_High_School_Diploma`, "2013-17_Percent_High_School_Diploma_Only" = education_attainment$`2013-17_Percent_High_School_Diploma_Only`, "2013-17_Percent_Some_College" = education_attainment$`2013-17_Percent_Some_College`, "2013-17_Percent_Bachelor_Degree_Or_Higher" = education_attainment$`2013-17_Percent_Bachelor_Degree_Or_Higher`)
 ```
 
 The next step to cleaning the data is to change some of the columns in the education table that are being represented as doubles to integers.  We want the columns holding the percent values to be doubles, however the columns not holding percent values can be integers.
@@ -149,7 +150,6 @@ education$`2013-17_Less_Than_High_School_Diploma` <- type.convert(education$`201
 education$`2013-17_High_School_Diploma_Only` <- type.convert(education$`2013-17_High_School_Diploma_Only`)
 education$`2013-17_Some_College` <- type.convert(education$`2013-17_Some_College`)
 education$`2013-17_Bachelor_Degree_Or_Higher` <- type.convert(education$`2013-17_Bachelor_Degree_Or_Higher`)
-sapply(education, typeof)
 ```
 
 
@@ -164,18 +164,116 @@ levels(location$`2003_Rural_Urban_Continuum_Code`)
 
 location$`2003_Urban_Influence_Code` <- as.factor(location$`2003_Urban_Influence_Code`)
 levels(location$`2003_Urban_Influence_Code`)
-typeof
 
 location$`2013_Rural_Urban_Continuum_Code` <- as.factor(location$`2013_Rural_Urban_Continuum_Code`)
 levels(location$`2013_Rural_Urban_Continuum_Code`)
 
 location$`2013_Urban_Influence_Code` <- as.factor(location$`2013_Urban_Influence_Code`)
 levels(location$`2013_Urban_Influence_Code`)
+
+education$State <- as.factor(education$State)
+levels(education$State)
 ```
 
-5. Document any manipulations you make to clean your data and organize it as Tidy Data as best you can prepare it for data analysis and modeling
+
+# Data Summarizations:
+
+To first make some data summarizations I am going to use the summary() function to give a brief overview of each column.
+
+Summaries for the year 1970:
+```{r}
+#summary for 1970
+summary(education$`1970_Less_Than_High_School_Diploma`)
+summary(education$`1970_High_School_Diploma_Only`)
+summary(education$`1970_Some_College`)
+summary(education$`1970_Bachelor_Degree_Or_Higher`)
+```
+
+Summaries for the year 1980:
+```{r}
+#summary for 1980
+summary(education$`1980_Less_Than_High_School_Diploma`)
+summary(education$`1980_High_School_Diploma_Only`)
+summary(education$`1980_Some_College`)
+summary(education$`1980_Bachelor_Degree_Or_Higher`)
+```
+
+Summaries for the year 1990:
+```{r}
+summary(education$`1990_Less_Than_High_School_Diploma`)
+summary(education$`1990_High_School_Diploma_Only`)
+summary(education$`1990_Some_College`)
+summary(education$`1990_Bachelor_Degree_Or_Higher`)
+```
+
+Summaries for the year 2000:
+```{r}
+#summary for 2000
+summary(education$`2000_Less_Than_High_School_Diploma`)
+summary(education$`2000_High_School_Diploma_Only`)
+summary(education$`2000_Some_College`)
+summary(education$`2000_Bachelor_Degree_Or_Higher`)
+```
+
+Summary for the years 2013-17:
+```{r}
+#summary for 2013-17
+summary(education$`2013-17_Less_Than_High_School_Diploma`)
+summary(education$`2013-17_High_School_Diploma_Only`)
+summary(education$`2013-17_Some_College`)
+summary(education$`2013-17_Bachelor_Degree_Or_Higher`)
+```
+
+By just using the summary() function you are able to see the shift in how educated people are over the years.  The highest average number of people for 1970 is the "less than a high school diploma" group.  By 1980 "less than a high school diploma" and "high school diploma only" have close to the same average number of people. In 1990 the highest average number of people is now just "high school diploma only".  For the year 2000, "high school diploma only", "some college", and "bachelor degree or higher" all have a very close average number of people. And by the years 2013-17 "bachelor degree or higher" now has the highest average number of students.
+
+I have decided to graph the Levels that had the highest averages for each year.  For some years I have graphed two since their averages were very close.  Each graph shows the average number of students by state at that level for that specific year.
+
+```{r}
+library("ggplot2")
+mean(education$`1970_Less_Than_High_School_Diploma`, na.rm = TRUE)
+
+
+ggplot(education, aes(State, mean(`1970_Less_Than_High_School_Diploma`, na.rm = TRUE))) + geom_col() + labs( x = "State", y = "Average Number of Students",
+title ="Average number of student in 1970 with less than a high school diploma") 
+
+ggplot(education, aes(State, mean(`1980_High_School_Diploma_Only`, na.rm = TRUE))) + geom_col() + labs( x = "State", y = "Average Number of Students",
+title ="Average number of student in 1980 with a high school diploma only") 
+
+
+ggplot(education, aes(State, mean(`1980_Less_Than_High_School_Diploma`, na.rm = TRUE))) + geom_col() + labs( x = "State", y = "Average Number of Students",
+title ="Average number of student in 1980 less than a high school diploma") 
+
+
+ggplot(education, aes(State, mean(`1990_High_School_Diploma_Only`, na.rm = TRUE))) + geom_col() + labs( x = "State", y = "Average Number of Students",
+title ="Average number of student in 1990 with a high school diploma only") 
+
+
+ggplot(education, aes(State, mean(`2000_High_School_Diploma_Only`, na.rm = TRUE))) + geom_col() + labs( x = "State", y = "Average Number of Students",
+title ="Average number of student in 2000 with a high school diploma only") 
+
+ggplot(education, aes(State, mean(`2000_Some_College`, na.rm = TRUE))) + geom_col() + labs( x = "State", y = "Average Number of Students",
+title ="Average number of student in 2000 with some college completed") 
+
+
+ggplot(education, aes(State, mean(`2013-17_Bachelor_Degree_Or_Higher`, na.rm = TRUE))) + geom_col() + labs( x = "State", y = "Average Number of Students",
+title ="Average number of student in 2013-17 with a bachelor degree or higher") 
+```
+I think that the limitation to these graphs is that the average number of people is dependent on the population in that state. So you should not compare the states to each to each other people each of the states total population is different.
+
 6. Summarize your data using descriptive statistics, along with visualizations (with accompanying interpretations) that help explore what possible insights you might investigate.
 7. Finally, describe what research questions you hope to explore in later phases, along with potential social & ethical implications of your work. For help identifying and phrasing research questions, see How to Write a Research Question
+
+# Research Questions
+
+Do major education political policies have a positive effect on student learning and achievement?
+
+What is the most signifigant factor that has caused there to be an increase in people who have completed a college degree?
+
+What is the most signifigant economical effect caused by the increase in people going to college now compared to 20 years ago?
+
+What action can local government take to improve the education system for the employees?
+
+How has education employment changed over time and are those changes related to the changes in education achievement?
 
 
 
